src/test/ui/issues/issue-32963.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/issue-32963.rs:8:31
   |
LL |     size_of_copy::<dyn Misc + Copy>();
   |                        ----   ^^^^ additional non-auto trait
   |                        |
   |                        first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Misc + Copy {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/issue-32963.rs:8:31
   |
LL |     size_of_copy::<dyn Misc + Copy>();
   |                        ----   ^^^^ additional non-auto trait
   |                        |
   |                        first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Misc + Copy {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0277]: the trait bound `dyn Misc: Copy` is not satisfied
  --> $DIR/issue-32963.rs:8:5
   |
LL |     size_of_copy::<dyn Misc + Copy>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `dyn Misc`
   |
note: required by a bound in `size_of_copy`
  --> $DIR/issue-32963.rs:5:20
   |
LL | fn size_of_copy<T: Copy+?Sized>() -> usize { mem::size_of::<T>() }
   |                    ^^^^ required by this bound in `size_of_copy`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0225, E0277.
For more information about an error, try `rustc --explain E0225`.
